--- a/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
+++ b/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
@@ -780,13 +780,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Basket name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P0E-1m-o51">
-                                <rect key="frame" x="88" y="231" width="210" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LCg-55-Sqb">
-                                <rect key="frame" x="88" y="273" width="210" height="34"/>
+                                <rect key="frame" x="88" y="271" width="210" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -799,7 +793,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z3Y-dP-1mG">
-                                <rect key="frame" x="40" y="730" width="334" height="61"/>
+                                <rect key="frame" x="40" y="643" width="334" height="50"/>
                                 <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="pHm-Et-zRl"/>
@@ -812,7 +806,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Basket description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="d15-1B-Fid">
-                                <rect key="frame" x="73" y="292" width="240" height="98"/>
+                                <rect key="frame" x="73" y="421" width="240" height="162"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -820,17 +814,36 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E9J-pN-USu">
-                                <rect key="frame" x="51" y="130" width="209" height="80"/>
+                                <rect key="frame" x="89" y="147" width="209" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1hc-S9-QK9">
+                                <rect key="frame" x="125" y="224" width="137" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Add a header image"/>
+                                <connections>
+                                    <action selector="headerImageButtonTapped:" destination="LWX-5I-5sV" eventType="touchUpInside" id="2tt-ak-I94"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LCg-55-Sqb">
+                                <rect key="frame" x="88" y="330" width="210" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="pr9-3r-5cg" firstAttribute="bottom" secondItem="z3Y-dP-1mG" secondAttribute="bottom" constant="120" id="n4J-Aw-IAa"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="pr9-3r-5cg"/>
                     </view>
                     <navigationItem key="navigationItem" title="Add basket" id="cUe-qc-m0G"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="basketCategoryTextField" destination="LCg-55-Sqb" id="sec-Xp-7WI"/>
                         <outlet property="basketDescriptionTextView" destination="d15-1B-Fid" id="5bW-2j-AwS"/>
+                        <outlet property="basketHeaderImageView" destination="E9J-pN-USu" id="YB2-EZ-OPI"/>
                         <outlet property="basketNameTextField" destination="P0E-1m-o51" id="wJy-yT-y0j"/>
                         <segue destination="aSZ-tc-AJd" kind="show" identifier="addNonprofitsSegue" id="S2d-pd-r6C"/>
                     </connections>
@@ -847,8 +860,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="obc-RZ-PGZ">
-                                <rect key="frame" x="60" y="684" width="334" height="61"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="obc-RZ-PGZ">
+                                <rect key="frame" x="35" y="695" width="344" height="50"/>
                                 <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="NIz-Pj-vNc"/>
@@ -861,12 +874,19 @@
                                     <action selector="nextButtonTapped:" destination="LWX-5I-5sV" eventType="touchUpInside" id="GVE-U5-Seq"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select nonprofits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Rx-43-190">
+                                <rect key="frame" x="82" y="273" width="131" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="71n-vH-RZY">
-                                <rect key="frame" x="20" y="360" width="414" height="205"/>
+                                <rect key="frame" x="0.0" y="337" width="414" height="248"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="96" id="oMw-yN-wZq">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="NonprofitListCell" rowHeight="96" id="oMw-yN-wZq" customClass="NonprofitListCell">
                                         <rect key="frame" x="0.0" y="28" width="414" height="96"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oMw-yN-wZq" id="6v7-PU-mfm">
@@ -876,15 +896,13 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select nonprofits" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Rx-43-190">
-                                <rect key="frame" x="82" y="273" width="131" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="obc-RZ-PGZ" firstAttribute="leading" secondItem="byl-9F-cXt" secondAttribute="leading" constant="35" id="3Eb-oP-DHz"/>
+                            <constraint firstItem="obc-RZ-PGZ" firstAttribute="centerX" secondItem="G8m-yr-nAq" secondAttribute="centerX" id="Ve1-56-Szc"/>
+                            <constraint firstItem="byl-9F-cXt" firstAttribute="bottom" secondItem="obc-RZ-PGZ" secondAttribute="bottom" constant="68" id="arY-8l-pib"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="byl-9F-cXt"/>
                     </view>
                     <navigationItem key="navigationItem" id="51U-hF-evB"/>
@@ -895,7 +913,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="97b-ct-k3d" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3343" y="-375"/>
+            <point key="canvasLocation" x="3342.0289855072465" y="-375"/>
         </scene>
         <!--Item 2-->
         <scene sceneID="12k-2Z-vca">
