Add cell UI when searching nonprofits when adding new basket

--- a/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
+++ b/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
@@ -813,7 +813,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="E9J-pN-USu">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="PlaceholderHeaderPic" translatesAutoresizingMaskIntoConstraints="NO" id="E9J-pN-USu">
                                 <rect key="frame" x="89" y="147" width="209" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
