Fix scroll view in basketDetailVC

--- a/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
+++ b/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
@@ -430,10 +430,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Mh-Ct-HNJ">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Mh-Ct-HNJ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="873"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AAw-Hb-Otn">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AAw-Hb-Otn" userLabel="Content View">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="1000"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="#BlackLivesMatter" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="19a-t0-mUs">
@@ -518,7 +518,7 @@
                                             </stackView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7l-st-NDf">
                                                 <rect key="frame" x="45" y="478.5" width="324" height="325"/>
-                                                <mutableString key="text">Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team </mutableString>
+                                                <string key="text">Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team Created by the Basket team </string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -550,7 +550,10 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="AAw-Hb-Otn" firstAttribute="trailing" secondItem="huB-iq-yog" secondAttribute="trailing" id="3HQ-nu-YaD"/>
+                                    <constraint firstAttribute="trailing" secondItem="AAw-Hb-Otn" secondAttribute="trailing" id="McI-hU-sWG"/>
+                                    <constraint firstItem="AAw-Hb-Otn" firstAttribute="leading" secondItem="1Mh-Ct-HNJ" secondAttribute="leading" id="aHT-pn-Qvo"/>
                                     <constraint firstItem="AAw-Hb-Otn" firstAttribute="top" secondItem="1Mh-Ct-HNJ" secondAttribute="top" id="cvH-rK-hWF"/>
+                                    <constraint firstAttribute="bottom" secondItem="AAw-Hb-Otn" secondAttribute="bottom" id="jNK-Km-eNi"/>
                                     <constraint firstItem="AAw-Hb-Otn" firstAttribute="leading" secondItem="huB-iq-yog" secondAttribute="leading" id="kp2-b1-uF2"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="eDr-tf-zdN"/>
